--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="video_player">Video Player</string>
     <string name="main_tabs">Main</string>
     <string name="custom_player">Custom Player</string>
+    <string name="start_service">Start Service</string>
+    <string name="oxygen_player">Oxygen Player</string>
 
 
     <!-- Generic Strings -->
