--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="custom_player">Custom Player</string>
     <string name="start_service">Start Service</string>
     <string name="oxygen_player">Oxygen Player</string>
+    <string name="users_activity">Users Activity</string>
+
 
 
     <!-- Generic Strings -->
